--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
         "react-icons": "^5.3.0",
         "react-router-dom": "^6.26.2",
         "refresh-token": "^1.0.0",
-        "styled-components": "^6.1.13"
+        "styled-components": "^6.1.13",
+        "ws": "^8.18.0"
     },
     "author": "Nat bates",
     "license": "ISC",
