--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
         "react-scripts": "^5.0.1"
     },
     "dependencies": {
+        "@azure/msal-browser": "^3.26.1",
         "bootstrap": "^5.3.3",
         "dotenv": "^16.4.5",
+        "firebase": "^11.0.1",
         "node-fetch": "^2.7.0",
         "react": "^18.0.0",
         "react-dom": "^18.0.0",
