--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
     "description": "kye portfolio",
     "main": "index.js",
     "scripts": {
-        "start": "react-scripts start",
+        "start": "PORT=8082 react-scripts start",
         "build": "react-scripts build",
         "test": "echo \"Error: no test specified\" && exit 1",
         "eject": "react-scripts eject"
